--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -17,6 +17,25 @@
 				</li>
 			</ul>
 
+			<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+				{% if app.user %}
+					<li class="nav-item">
+						<a class="nav-link" href="#">Mon compte</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{path('app_logout')}}">Me déconnecter</a>
+					</li>
+				{% else %}
+
+					<li class="nav-item">
+						<a class="nav-link" href="{{path('app_register')}}">M'inscrire</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{path('app_login')}}">Me connecter</a>
+					</li>
+
+				{% endif %}
+			</ul>
 		</div>
 	</div>
 </nav>
