--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -25,6 +25,7 @@
 				{{ form_row(registrationForm.RGPDConsent) }}
 
 				<button type="submit" class="btn btn-primary btn-lg my-3">M'inscrire</button>
+				<a href="{{path('app_login')}}" class="btn btn-secondary mt-3">Me connecter</a>
 				{{ form_end(registrationForm) }}
 
 			</div>
