--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,7 +17,7 @@
 					{% if app.user %}
 						<div class="mb-3">
 							Vous etes connecté(e) comme
-							{{ app.user.username }},
+							{{ app.user.userIdentifier }},
 							<a href="{{ path('app_logout') }}">Me déconnecter</a>
 						</div>
 					{% endif %}
@@ -32,19 +32,20 @@
 					type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
 					{#
-																																        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-																																        See https://symfony.com/doc/current/security/remember_me.html
-																																
-																																        <div class="checkbox mb-3">
-																																            <label>
-																																                <input type="checkbox" name="_remember_me"> Remember me
-																																            </label>
-																																        </div>
-																																    #}
+																																																									        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+																																																									        See https://symfony.com/doc/current/security/remember_me.html
+																																																									
+																																																									        <div class="checkbox mb-3">
+																																																									            <label>
+																																																									                <input type="checkbox" name="_remember_me"> Remember me
+																																																									            </label>
+																																																									        </div>
+																																																									    #}
 
 					<button class="btn btn-lg btn-primary mt-3" type="submit">
 						Me connecter
 					</button>
+					<a href="{{path('app_register')}}" class="btn btn-secondary mt-3">M'inscrire</a>
 				</form>
 
 			</div>
