--- a/templates/profile/posts.html.twig
+++ b/templates/profile/posts.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProfileController!
+{% block title %}Mes posts
 {% endblock %}
 
 {% block body %}
