--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -25,7 +25,7 @@
 						<a class="nav-link" href="{{path('app_profil')}}">Mon compte</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{{path('app_profil')}}">Mes Posts</a>
+						<a class="nav-link" href="{{path('profil_posts_ajout')}}">Mes Posts</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="{{path('app_logout')}}">Me déconnecter</a>
