--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -4,4 +4,39 @@
 {% endblock %}
 
 
-{% block body %}{% endblock %}
+{% block body %}
+	<div class="col-xs4">
+		<h1>Profil de
+			{{app.user.username}}
+		</h1>
+	</div>
+
+	<div class="col-xs1">
+		Nom :
+	</div>
+	<div class="col-xs3">
+		{{app.user.lastname}}</div>
+	<div class="col-xs1">
+		Prénom :
+	</div>
+	<div class="col-xs3">
+		{{app.user.firstname}}</div>
+	<div class="col-xs1">
+		Avatar :
+	</div>
+	<div class="col-xs3">
+		{{app.user.avatar}}</div>
+	<div class="col-xs1">
+		Nom :
+	</div>
+	<div class="col-xs3">
+		{{app.user.lastname}}</div>
+	<div class="col-xs4">
+		<a href="#" class="btn blue">Modifier le profil</a>
+		<a href="#" class="btn blue">
+			Modifier le mot de passe
+		</a>
+	</div>
+
+
+{% endblock %}
