--- a/templates/profile/posts.html.twig
+++ b/templates/profile/posts.html.twig
@@ -4,35 +4,17 @@
 {% endblock %}
 
 {% block body %}
-	<style>
-		.example-wrapper {
-			margin: 1em auto;
-			max-width: 800px;
-			width: 95%;
-			font: 18px / 1.5 sans-serif;
-		}
-		.example-wrapper code {
-			background: #F5F5F5;
-			padding: 2px 6px;
-		}
-	</style>
+	<div class="col-xs4">
+		<h1>Post de
+			{{app.user.username}}</h1>
 
-	<div class="example-wrapper">
-		<h1>Hello
-			{{ controller_name }}! ✅</h1>
+		{% for post in app.user.post %}
+			<div class="col-xs1">Question:</div>
+			<div class="col-xs3">{{post.question}}</div>
+			<div class="col-xs1">Contenu:
+			</div>
+			<div class="col-xs3">{{post.question}}</div>
 
-		This friendly message is coming from:
-		<ul>
-			<li>Your controller at
-				<code>
-					<a href="{{ '/home/naima/Bureau/heplApp/src/Controller/ProfileController.php'|file_link(0) }}">src/Controller/ProfileController.php</a>
-				</code>
-			</li>
-			<li>Your template at
-				<code>
-					<a href="{{ '/home/naima/Bureau/heplApp/templates/profile/index.html.twig'|file_link(0) }}">templates/profile/index.html.twig</a>
-				</code>
-			</li>
-		</ul>
+		{% endfor %}
 	</div>
 {% endblock %}
